# ha-mcp

./: .env.example  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.claude/skills/issue-analysis/: SKILL.md
.claude/skills/issue-to-pr-resolver/: SKILL.md
.claude/skills/my-pr-checker/: SKILL.md
.claude/skills/wt/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: gemini-triage.yml  renovate.yml
docs/: FAQ.md  Windows-uv-guide.md  dev-channel.md
homeassistant-addon/: DOCS.md  config.yaml  start.py
homeassistant-addon-dev/: DOCS.md  config.yaml
homeassistant-addon-dev/translations/: en.yaml
homeassistant-addon-webhook-proxy/: config.yaml
homeassistant-addon-webhook-proxy/mcp_proxy/: __init__.py  manifest.json
homeassistant-addon/translations/: en.yaml
scripts/: install-windows.ps1
site/src/content/clients/: antigravity.md  chatgpt.md  claude-ai.md  cline.md  codex.md  continue.md  copilot-cli.md  gemini-cli.md  jetbrains.md  open-webui.md  opencode.md  raycast.md  windsurf.md  zed.md
site/src/data/: clients.ts  tools.json
site/src/pages/: faq.astro  guide-macos.astro  guide-windows.astro  setup.astro
src/ha_mcp/: __init__.py  config.py  server.py  settings_ui.py
src/ha_mcp/client/: rest_client.py  websocket_client.py
src/ha_mcp/tools/: backup.py  best_practice_checker.py  helpers.py  tools_addons.py  tools_config_automations.py  tools_config_dashboards.py  tools_config_helpers.py  tools_config_scripts.py  tools_energy.py  tools_entities.py  tools_filesystem.py  tools_history.py  tools_integrations.py  tools_search.py  tools_system.py  tools_traces.py  tools_utility.py  tools_yaml_config.py
src/ha_mcp/utils/: config_hash.py  data_paths.py  kill_signal_diagnostics.py  python_sandbox.py  usage_logger.py
tests/addon/: test_addon_startup.py  test_skills_config.py  test_webhook_proxy.py
tests/initial_test_state/: configuration.yaml
tests/src/e2e/tools/: test_deep_search_exact_match.py  test_skills_resources.py  test_tools_energy.py
tests/src/e2e/workflows/automation/: test_python_transform.py
tests/src/e2e/workflows/config/: test_helper_crud.py
tests/src/e2e/workflows/dashboards/: test_lifecycle.py  test_python_transform.py
tests/src/e2e/workflows/entities/: test_show_as.py
tests/src/e2e/workflows/filesystem/: test_yaml_config.py
tests/src/e2e/workflows/scripts/: test_python_transform.py
tests/src/e2e/workflows/system/: test_system_tools.py
tests/src/unit/: test_custom_component_filesystem.py  test_data_paths.py  test_ha_resources_as_tools.py  test_kill_signal_diagnostics.py  test_overview_system_info.py  test_python_sandbox.py  test_settings_ui.py  test_skills_instructions.py  test_ssl_verification.py  test_tools_addons.py  test_tools_config_dashboards.py  test_tools_energy.py  test_tools_entities.py  test_tools_filesystem.py  test_tools_integrations.py  test_tools_utility_supervisor_logs.py  test_usage_logger.py  test_yaml_config_tool.py  test_yaml_dashboards.py
tests/test_docker/: test_docker_build.py
tests/uat/stories/catalog/: s13_dashboard_update_existing.yaml
